pkgdata_DATA =  abiview0.gif banana0.gif chaos0.gif cpgplot0.gif \
               dotmatcher0.gif dottup0.gif emboss_icon.gif findkm0.gif \
               isochore0.gif octanol0.gif pepinfo1.gif pepinfo2.gif \
               pepnet0.gif pepwheel0.gif pepwindow0.gif pepwindowall0.gif \
               plotorf0.gif polydot0.gif prettyplot3.gif prettyplot4.gif \
               syco0.gif syco1.gif tmap0.gif topo.gif wobble0.gif \
               SITE-DIRECTED.html abi_trace_files_group.html abiview.html \
               alignment_global_group.html alignment_group.html \
               alignment_local_group.html alignment_multiple_group.html \
               antigenic.html assorted_group.html backtranseq.html \
               banana.html btwisted.html chaos.html checktrans.html \
               chips.html cirdna.html clique.html codcmp.html coderet.html \
               coding_regions_group.html comparison_group.html compseq.html \
               cons.html consense.html contml.html contrast.html \
               cpg_islands_group.html cpgplot.html cpgreport.html cusp.html \
               cutseq.html dan.html database_entry_extraction_group.html \
               database_indexing_group.html database_information_group.html \
               dbiblast.html dbifasta.html dbiflat.html dbigcg.html \
               degapseq.html descseq.html diffseq.html digest.html \
               display_alignment_multiple_group.html \
               dna_sequence_composition_group.html \
               dna_sequence_features_group.html \
               dna_sequence_properties_group.html dnacomp.html dnadist.html \
               dnainvar.html dnaml.html dnamlk.html dnapars.html \
               dnapenny.html dollop.html dolpenny.html domainer.html \
               dotmatcher.html dotpath.html dottup.html dreg.html \
               eclique.html econsense.html econtml.html econtrast.html \
               ednacomp.html ednadist.html ednainvar.html ednaml.html \
               ednamlk.html ednapars.html ednapenny.html edollop.html \
               edolpenny.html efactor.html efitch.html egendist.html \
               einverted.html ekitsch.html embossdata.html emix.html \
               emma.html emnu.html emowse.html eneighbor.html entret.html \
               enzyme_kinetics_group.html epenny.html eprotdist.html \
               eprotpars.html equicktandem.html erestml.html eseqboot.html \
               est2genome.html etandem.html extractseq.html factor.html \
               findkm.html fitch.html freak.html fuzznuc.html fuzzpro.html \
               fuzztran.html garnier.html geecee.html gendist.html \
               gene_finding_group.html getorf.html groups.html \
               helixturnhelix.html hydropathy_group.html iep.html \
               index.html infoseq.html isochore.html kitsch.html
pkgdata2_DATA = lindna.html marscan.html maskfeat.html maskseq.html \
               matcher.html megamerger.html menus_group.html merger.html \
               mix.html motifs_group.html msbar.html mse.html \
               mutation_group.html needle.html neighbor.html \
               new_group_group.html newcpgreport.html newcpgseek.html \
               newseq.html noreturn.html notseq.html nrscope.html \
               nthseq.html octanol.html oddcomp.html palindrome.html \
               pasteseq.html patmatdb.html patmatmotifs.html \
               pattern_matching_group.html penny.html pepcoil.html \
               pepinfo.html pepnet.html pepstats.html pepwheel.html \
               pepwindow.html pepwindowall.html plotcon.html plotorf.html \
               polydot.html preg.html prettyplot.html prettyseq.html \
               prima.html primers_group.html primersearch.html \
               printsextract.html profiles_group.html profit.html \
               prophecy.html prophet.html prosextract.html protdist.html \
               protein_sequence_composition_group.html \
               protein_sequence_features_group.html \
               protein_sequence_properties_group.html \
               protein_structure_group.html pscan.html re_group.html \
               rebaseextract.html recode.html redata.html \
               reformatting_group.html remap.html repeats_group.html \
               restml.html restover.html restrict.html \
               restriction_enzymes_group.html revseq.html scope.html \
               secondary_structure_group.html seealso.html seqboot.html \
               seqmatchall.html seqret.html seqretall.html seqretset.html \
               seqretsplit.html sequence_comparison_group.html \
               sequence_composition_group.html sequence_display_group.html \
               sequence_editing_group.html sequence_features_group.html \
               sequence_information_group.html showdb.html showfeat.html \
               showorf.html showseq.html shuffleseq.html sigcleave.html \
               silent.html site_directed_mutagenesis_group.html \
               splitter.html stretcher.html stssearch.html \
               supermatcher.html syco.html text_search_group.html \
               textsearch.html tfextract.html tfm.html tfscan.html \
               tmap.html topo.html transcription_group.html transeq.html \
               translation_group.html trimseq.html utilities_group.html \
               utilities_help_group.html \
               utilities_keyword_search_group.html vectorstrip.html \
               water.html wobble.html wordcount.html wordmatch.html \
               wossname.html

pkgdatadir=$(prefix)/share/$(PACKAGE)/doc/programs/html
pkgdata2dir=$(prefix)/share/$(PACKAGE)/doc/programs/html
