pkgdata_DATA =  abiview0.gif banana0.gif chaos0.gif cpgplot0.gif \
               dotmatcher0.gif dottup0.gif emboss_icon.gif findkm0.gif \
               isochore0.gif lindna.gif octanol0.gif pepinfo1.gif \
               pepinfo2.gif pepnet0.gif pepwheel0.gif pepwindow0.gif \
               pepwindowall0.gif plotorf0.gif polydot0.gif prettyplot3.gif \
               prettyplot4.gif syco0.gif syco1.gif tmap0.gif topo.gif \
               wobble0.gif abiview.html alignment_consensus_group.html \
               alignment_differences_group.html \
               alignment_dot_plots_group.html alignment_global_group.html \
               alignment_local_group.html alignment_multiple_group.html \
               antigenic.html backtranseq.html banana.html btwisted.html \
               cai.html chaos.html charge.html checktrans.html chips.html \
               cirdna.html clique.html codcmp.html coderet.html \
               compseq.html cons.html consense.html contml.html \
               contrast.html cpgplot.html cpgreport.html cusp.html \
               cutseq.html dan.html dbiblast.html dbifasta.html \
               dbiflat.html dbigcg.html degapseq.html descseq.html \
               diffseq.html digest.html display_group.html distmat.html \
               dnacomp.html dnadist.html dnainvar.html dnaml.html \
               dnamlk.html dnapars.html dnapenny.html dollop.html \
               dolpenny.html domainer.html dotmatcher.html dotpath.html \
               dottup.html dreg.html eclique.html econsense.html \
               econtml.html econtrast.html edit_group.html ednacomp.html \
               ednadist.html ednainvar.html ednaml.html ednamlk.html \
               ednapars.html ednapenny.html edollop.html edolpenny.html \
               efactor.html efitch.html egendist.html einverted.html \
               ekitsch.html embossdata.html embossversion.html emix.html \
               emma.html emowse.html eneighbor.html entret.html \
               enzyme_kinetics_group.html epenny.html eprotdist.html \
               eprotpars.html equicktandem.html erestml.html eseqboot.html \
               est2genome.html etandem.html extractseq.html factor.html \
               feature_tables_group.html findkm.html fitch.html freak.html \
               fuzznuc.html fuzzpro.html fuzztran.html garnier.html \
               geecee.html gendist.html getorf.html groups.html \
               helixturnhelix.html hmoment.html iep.html index.html \
               information_group.html infoseq.html isochore.html
pkgdata2_DATA = kitsch.html lindna.html marscan.html maskfeat.html \
               maskseq.html matcher.html megamerger.html menus_group.html \
               merger.html mix.html msbar.html mse.html needle.html \
               neighbor.html newcpgreport.html newcpgseek.html newseq.html \
               noreturn.html notseq.html nrscope.html nthseq.html \
               nucleic_2d_structure_group.html \
               nucleic_codon_usage_group.html \
               nucleic_composition_group.html \
               nucleic_cpg_islands_group.html \
               nucleic_gene_finding_group.html nucleic_motifs_group.html \
               nucleic_mutation_group.html nucleic_primers_group.html \
               nucleic_profiles_group.html nucleic_repeats_group.html \
               nucleic_restriction_group.html \
               nucleic_transcription_group.html \
               nucleic_translation_group.html octanol.html oddcomp.html \
               palindrome.html pasteseq.html patmatdb.html \
               patmatmotifs.html penny.html pepcoil.html pepinfo.html \
               pepnet.html pepstats.html pepwheel.html pepwindow.html \
               pepwindowall.html phylogeny_group.html plotcon.html \
               plotorf.html polydot.html preg.html prettyplot.html \
               prettyseq.html prima.html primersearch.html \
               printsextract.html profit.html prophecy.html prophet.html \
               prosextract.html protdist.html \
               protein_2d_structure_group.html \
               protein_3d_structure_group.html \
               protein_composition_group.html protein_motifs_group.html \
               protein_mutation_group.html protein_profiles_group.html \
               pscan.html rebaseextract.html recode.html recoder.html \
               redata.html remap.html restml.html restover.html \
               restrict.html revseq.html scopalign.html scope.html \
               seealso.html seqboot.html seqmatchall.html seqret.html \
               seqretall.html seqretfeat.html seqretset.html \
               seqretsplit.html showalign.html showdb.html showfeat.html \
               showorf.html showseq.html shuffleseq.html sigcleave.html \
               silent.html splitter.html stamps.html stretcher.html \
               stssearch.html supermatcher.html syco.html test_group.html \
               textsearch.html tfextract.html tfm.html tfscan.html \
               tmap.html topo.html transeq.html trimseq.html \
               utils_database_creation_group.html \
               utils_database_indexing_group.html utils_misc_group.html \
               vectorstrip.html water.html wobble.html wordcount.html \
               wordmatch.html wossname.html

pkgdatadir=$(prefix)/share/$(PACKAGE)/doc/programs/html
pkgdata2dir=$(prefix)/share/$(PACKAGE)/doc/programs/html
