pkgdata_DATA =  abiview.1.abiview.gif chaos.1.chaos.gif cirdna.1.cirdna.gif \
	cpgplot.1.cpgplot.gif dan.2.dan.gif \
	dotmatcher.1.dotmatcher.gif dotpath.1.dotpath.gif \
	dottup.1.dottup.gif emboss_icon.gif findkm.1.findkm.gif \
	isochore.1.isochore.gif lindna.1.lindna.gif \
	octanol.1.octanol.gif pepinfo.1.pepinfo.gif \
	pepnet.1.pepnet.gif pepwheel.1.pepwheel.gif \
	pepwindow.1.pepwindow.gif pepwindowall.1.pepwindowall.gif \
	plotcon.1.plotcon.gif plotorf.1.plotorf.gif \
	plotorf.2.plotorf.gif polydot.1.polydot.gif \
	prettyplot.1.prettyplot.gif prettyplot.2.prettyplot.gif \
	syco.1.syco.gif tmap.1.tmap.gif topo.gif wobble.1.wobble.gif \
	aaindexextract.html abiview.html acd_group.html acdc.html \
	acdlog.html acdpretty.html acdtable.html acdtrace.html \
	acdvalid.html ajtest.html alignment_consensus_group.html \
	alignment_differences_group.html \
	alignment_dot_plots_group.html alignment_global_group.html \
	alignment_local_group.html alignment_multiple_group.html \
	alignrunner.html allversusall.html antigenic.html \
	backtranseq.html banana.html biosed.html btwisted.html \
	cai.html cathparse.html chaos.html charge.html \
	checktrans.html chips.html cirdna.html codcmp.html \
	codcopy.html coderet.html comparator.html compseq.html \
	cons.html contactalign.html contacts.html cpgplot.html \
	cpgreport.html crystalball.html cusp.html cutgextract.html \
	cutseq.html dan.html dbiblast.html dbifasta.html \
	dbiflat.html dbigcg.html dbxfasta.html dbxflat.html \
	dbxgcg.html degapseq.html degapseqrunner.html descseq.html \
	diffseq.html digest.html display_group.html distmat.html \
	domainalign.html domainer.html domainnr.html domainrep.html \
	domainreso.html domainseqs.html domainsse.html \
	dotmatcher.html dotpath.html dottup.html dreg.html \
	ealistat.html eclique.html econsense.html econtml.html \
	econtrast.html edit_group.html ednacomp.html ednadist.html \
	ednainvar.html ednaml.html ednamlk.html ednapars.html \
	ednapenny.html edollop.html edolpenny.html efactor.html \
	efitch.html egendist.html ehmmalign.html ehmmbuild.html \
	ehmmcalibrate.html ehmmconvert.html ehmmemit.html \
	ehmmfetch.html ehmmindex.html ehmmpfam.html ehmmsearch.html \
	einverted.html ekitsch.html embossdata.html \
	embossversion.html emix.html emma.html emnu.html emowse.html \
	eneighbor.html entret.html enzyme_kinetics_group.html \
	epenny.html epestfind.html eprimer3.html eprotdist.html \
	eprotpars.html equicktandem.html erestml.html eseqboot.html \
	esim4.html est2genome.html etandem.html extractfeat.html \
	extractseq.html fclique.html fconsense.html fcontml.html \
	fcontrast.html fdiscboot.html fdnacomp.html fdnadist.html \
	fdnainvar.html fdnaml.html fdnamlk.html fdnamove.html \
	fdnapars.html fdnapenny.html fdollop.html fdolmove.html \
	fdolpenny.html fdrawgram.html fdrawtree.html \
	feature_tables_group.html ffactor.html ffitch.html \
	ffreqboot.html fgendist.html findkm.html fkitsch.html \
	fmix.html fmove.html fneighbor.html fpars.html fpenny.html \
	fproml.html fpromlk.html fprotdist.html fprotpars.html \
	freak.html frestboot.html frestdist.html frestml.html \
	fretree.html fseqboot.html fseqbootall.html ftreedist.html \
	ftreedistpair.html fuzznuc.html fuzzpro.html fuzztran.html \
	garnier.html geecee.html getorf.html groups.html \
	helixturnhelix.html hetparse.html hmm_group.html \
	hmoment.html iep.html index.html infoalign.html \
	information_group.html infoseq.html interface.html \
	isochore.html jembossctl.html libgen.html libscan.html
pkgdata2_DATA = lindna.html listor.html marscan.html maskfeat.html \
	maskseq.html matcher.html matgen3d.html megamerger.html \
	meme.html menus_group.html merger.html msbar.html mse.html \
	mwcontam.html mwfilter.html myseq.html nawalign.html \
	nawalignrunner.html needle.html needlerunner.html \
	newcpgreport.html newcpgseek.html newseq.html noreturn.html \
	notseq.html nthseq.html nucleic_2d_structure_group.html \
	nucleic_codon_usage_group.html \
	nucleic_codon_usage_nucleic_gene_finding_group.html \
	nucleic_composition_group.html \
	nucleic_cpg_islands_group.html \
	nucleic_gene_finding_group.html nucleic_motifs_group.html \
	nucleic_mutation_group.html nucleic_primers_group.html \
	nucleic_profiles_group.html nucleic_repeats_group.html \
	nucleic_restriction_group.html \
	nucleic_transcription_group.html \
	nucleic_translation_group.html octanol.html oddcomp.html \
	palindrome.html pasteseq.html patmatdb.html \
	patmatmotifs.html pdbparse.html pdbplus.html pdbtosp.html \
	pepcoil.html pepinfo.html pepnet.html pepstats.html \
	pepwheel.html pepwindow.html pepwindowall.html \
	phylogeny_consensus_group.html \
	phylogeny_continuous_characters_group.html \
	phylogeny_discrete_characters_group.html \
	phylogeny_distance_matrix_group.html \
	phylogeny_gene_frequencies_group.html phylogeny_group.html \
	phylogeny_molecular_sequence_group.html \
	phylogeny_tree_drawing_group.html plotcon.html plotorf.html \
	polydot.html preg.html prettyplot.html prettyseq.html \
	primersearch.html printsextract.html profit.html \
	prophecy.html prophet.html prosextract.html \
	protein_2d_structure_group.html \
	protein_3d_structure_group.html \
	protein_composition_group.html protein_motifs_group.html \
	protein_mutation_group.html protein_profiles_group.html \
	protein_sequence_alignment_group.html pscan.html psiphi.html \
	rebaseextract.html recoder.html redata.html remap.html \
	restover.html restrict.html revseq.html rocon.html \
	rocplot.html scope.html scopparse.html scorecmapdir.html \
	scorer.html scorerrunner.html seealso.html seqalign.html \
	seqfraggle.html seqmatchall.html seqnr.html seqret.html \
	seqretsplit.html seqsearch.html seqsort.html seqwords.html \
	showalign.html showdb.html showfeat.html showorf.html \
	showseq.html shuffleseq.html sigcleave.html siggen.html \
	siggenlig.html sigscan.html sigscanlig.html silent.html \
	sirna.html sites.html sixpack.html skipseq.html \
	splitter.html ssematch.html stretcher.html stssearch.html \
	substitute.html substituterunner.html supermatcher.html \
	syco.html tcode.html template.html test_group.html \
	textsearch.html tfextract.html tfm.html tfscan.html \
	tmap.html topo.html tranalign.html transeq.html trimest.html \
	trimseq.html twofeat.html union.html \
	utils_database_creation_group.html \
	utils_database_indexing_group.html utils_misc_group.html \
	vectorstrip.html water.html whichdb.html wobble.html \
	wordcount.html wordmatch.html wossname.html yank.html \
               emboss_icon.jpg

pkgdatadir=$(prefix)/share/$(PACKAGE)/doc/programs/html
pkgdata2dir=$(prefix)/share/$(PACKAGE)/doc/programs/html
