pkgdata_DATA =  SITE-DIRECTED.txt aaindexextract.txt abiview.txt ajtest.txt \
               alignwrap.txt antigenic.txt backtranseq.txt banana.txt \
               biosed.txt btwisted.txt cai.txt chaos.txt charge.txt \
               checktrans.txt chips.txt cirdna.txt clique.txt codcmp.txt \
               coderet.txt complex.txt compseq.txt cons.txt consense.txt \
               contacts.txt contml.txt contrast.txt cpgplot.txt \
               cpgreport.txt cusp.txt cutgextract.txt cutseq.txt dan.txt \
               dbiblast.txt dbifasta.txt dbiflat.txt dbigcg.txt \
               degapseq.txt descseq.txt dichet.txt diffseq.txt digest.txt \
               distmat.txt dnacomp.txt dnadist.txt dnainvar.txt dnaml.txt \
               dnamlk.txt dnapars.txt dnapenny.txt dollop.txt dolpenny.txt \
               domainer.txt dotmatcher.txt dotpath.txt dottup.txt dreg.txt \
               eclique.txt econsense.txt econtml.txt econtrast.txt \
               ednacomp.txt ednadist.txt ednainvar.txt ednaml.txt \
               ednamlk.txt ednapars.txt ednapenny.txt edollop.txt \
               edolpenny.txt efactor.txt efitch.txt egendist.txt \
               einverted.txt ekitsch.txt embossdata.txt embossversion.txt \
               emix.txt emma.txt emowse.txt eneighbor.txt entret.txt \
               epenny.txt eprimer3.txt eprotdist.txt eprotpars.txt \
               equicktandem.txt erestml.txt eseqboot.txt est2genome.txt \
               etandem.txt extractfeat.txt extractseq.txt factor.txt \
               findkm.txt fitch.txt freak.txt funky.txt fuzznuc.txt \
               fuzzpro.txt fuzztran.txt garnier.txt geecee.txt gendist.txt \
               getorf.txt groups.txt helixturnhelix.txt hetparse.txt \
               histogramtest.txt hmmgen.txt hmoment.txt iep.txt \
               infoalign.txt infoseq.txt interface.txt isochore.txt
pkgdata2_DATA = jembossctl.txt kitsch.txt lindna.txt listor.txt marscan.txt \
               maskfeat.txt maskseq.txt matcher.txt megamerger.txt \
               merger.txt mix.txt msbar.txt mse.txt mwcontam.txt \
               mwfilter.txt needle.txt neighbor.txt newcpgreport.txt \
               newcpgseek.txt newseq.txt noreturn.txt notseq.txt \
               nrscope.txt nthseq.txt octanol.txt oddcomp.txt \
               palindrome.txt pasteseq.txt patmatdb.txt patmatmotifs.txt \
               pdbparse.txt pdbtosp.txt penny.txt pepcoil.txt pepinfo.txt \
               pepnet.txt pepstats.txt pepwheel.txt pepwindow.txt \
               pepwindowall.txt plotcon.txt plotorf.txt polydot.txt \
               preg.txt prettyplot.txt prettyseq.txt primersearch.txt \
               printsextract.txt profgen.txt profit.txt prophecy.txt \
               prophet.txt prosextract.txt protdist.txt pscan.txt \
               psiblasts.txt rebaseextract.txt recode.txt recoder.txt \
               redata.txt remap.txt restml.txt restover.txt restrict.txt \
               revseq.txt scopalign.txt scope.txt scopnr.txt scopparse.txt \
               scoprep.txt scopreso.txt scopseqs.txt seealso.txt \
               seqalign.txt seqboot.txt seqmatchall.txt seqnr.txt \
               seqret.txt seqretall.txt seqretallfeat.txt seqretfeat.txt \
               seqretset.txt seqretsplit.txt seqsearch.txt seqsort.txt \
               seqwords.txt showalign.txt showdb.txt showfeat.txt \
               showorf.txt showseq.txt shuffleseq.txt sigcleave.txt \
               siggen.txt sigscan.txt silent.txt skipseq.txt splitter.txt \
               stamps.txt stretcher.txt stssearch.txt supermatcher.txt \
               swissparse.txt syco.txt textsearch.txt tfextract.txt tfm.txt \
               tfscan.txt tmap.txt topo.txt tranalign.txt transeq.txt \
               trimest.txt trimseq.txt union.txt vectorstrip.txt water.txt \
               whichdb.txt wobble.txt wordcount.txt wordmatch.txt \
               wossname.txt yank.txt

pkgdatadir=$(prefix)/share/$(PACKAGE)/doc/programs/text
pkgdata2dir=$(prefix)/share/$(PACKAGE)/doc/programs/text
