pkgdata_DATA =  aaindexextract.txt abiview.txt acdc.txt acdlog.txt \
	acdpretty.txt acdtable.txt acdtrace.txt acdvalid.txt \
	alignrunner.txt allversusall.txt antigenic.txt \
	backtranseq.txt banana.txt biosed.txt btwisted.txt cai.txt \
	cathparse.txt chaos.txt charge.txt checktrans.txt chips.txt \
	cirdna.txt codcmp.txt codcopy.txt coderet.txt comparator.txt \
	complex.txt compseq.txt cons.txt contactalign.txt \
	contacts.txt cpgplot.txt cpgreport.txt crystalball.txt \
	cusp.txt cutgextract.txt cutseq.txt dan.txt dbiblast.txt \
	dbifasta.txt dbiflat.txt dbigcg.txt dbxfasta.txt dbxflat.txt \
	dbxgcg.txt degapseq.txt degapseqrunner.txt descseq.txt \
	diffseq.txt digest.txt distmat.txt domainalign.txt \
	domainer.txt domainnr.txt domainrep.txt domainreso.txt \
	domainseqs.txt domainsse.txt dotmatcher.txt dotpath.txt \
	dottup.txt dreg.txt ealistat.txt eclique.txt econsense.txt \
	econtml.txt econtrast.txt ednacomp.txt ednadist.txt \
	ednainvar.txt ednaml.txt ednamlk.txt ednapars.txt \
	ednapenny.txt edollop.txt edolpenny.txt efactor.txt \
	efitch.txt egendist.txt ehmmalign.txt ehmmbuild.txt \
	ehmmcalibrate.txt ehmmconvert.txt ehmmemit.txt ehmmfetch.txt \
	ehmmindex.txt ehmmpfam.txt ehmmsearch.txt einverted.txt \
	ekitsch.txt embossdata.txt embossversion.txt emix.txt \
	emma.txt emnu.txt emowse.txt eneighbor.txt entret.txt \
	epenny.txt epestfind.txt eprimer3.txt eprotdist.txt \
	eprotpars.txt equicktandem.txt erestml.txt eseqboot.txt \
	esim4.txt est2genome.txt etandem.txt extractfeat.txt \
	extractseq.txt fclique.txt fconsense.txt fcontml.txt \
	fcontrast.txt fdiscboot.txt fdnacomp.txt fdnadist.txt \
	fdnainvar.txt fdnaml.txt fdnamlk.txt fdnamove.txt \
	fdnapars.txt fdnapenny.txt fdollop.txt fdolmove.txt \
	fdolpenny.txt fdrawgram.txt fdrawtree.txt ffactor.txt \
	ffitch.txt ffreqboot.txt fgendist.txt findkm.txt fkitsch.txt \
	fmix.txt fmove.txt fneighbor.txt fpars.txt fpenny.txt \
	fproml.txt fpromlk.txt fprotdist.txt fprotpars.txt freak.txt \
	frestboot.txt frestdist.txt frestml.txt fretree.txt \
	fseqboot.txt fseqbootall.txt ftreedist.txt ftreedistpair.txt \
	fuzznuc.txt fuzzpro.txt fuzztran.txt garnier.txt geecee.txt \
	getorf.txt helixturnhelix.txt hetparse.txt hmoment.txt \
	iep.txt infoalign.txt infoseq.txt interface.txt isochore.txt
pkgdata2_DATA = jembossctl.txt libgen.txt libscan.txt lindna.txt listor.txt \
	marscan.txt maskfeat.txt maskseq.txt matcher.txt \
	matgen3d.txt megamerger.txt meme.txt merger.txt msbar.txt \
	mse.txt mwcontam.txt mwfilter.txt myseq.txt nawalign.txt \
	nawalignrunner.txt needle.txt needlerunner.txt \
	newcpgreport.txt newcpgseek.txt newseq.txt noreturn.txt \
	notseq.txt nthseq.txt octanol.txt oddcomp.txt palindrome.txt \
	pasteseq.txt patmatdb.txt patmatmotifs.txt pdbparse.txt \
	pdbplus.txt pdbtosp.txt pepcoil.txt pepinfo.txt pepnet.txt \
	pepstats.txt pepwheel.txt pepwindow.txt pepwindowall.txt \
	plotcon.txt plotorf.txt polydot.txt preg.txt prettyplot.txt \
	prettyseq.txt primersearch.txt printsextract.txt profit.txt \
	prophecy.txt prophet.txt prosextract.txt pscan.txt \
	psiphi.txt rebaseextract.txt recoder.txt redata.txt \
	remap.txt restover.txt restrict.txt revseq.txt rocon.txt \
	rocplot.txt scope.txt scopparse.txt scorecmapdir.txt \
	scorer.txt scorerrunner.txt seealso.txt seqalign.txt \
	seqfraggle.txt seqmatchall.txt seqnr.txt seqret.txt \
	seqretsplit.txt seqsearch.txt seqsort.txt seqwords.txt \
	showalign.txt showdb.txt showfeat.txt showorf.txt \
	showseq.txt shuffleseq.txt sigcleave.txt siggen.txt \
	siggenlig.txt sigscan.txt sigscanlig.txt silent.txt \
	sirna.txt SITE-DIRECTED.txt sites.txt sixpack.txt \
	skipseq.txt splitter.txt ssematch.txt stretcher.txt \
	stssearch.txt substitute.txt substituterunner.txt \
	supermatcher.txt syco.txt tcode.txt textsearch.txt \
	tfextract.txt tfm.txt tfscan.txt tmap.txt topo.txt \
	tranalign.txt transeq.txt trimest.txt trimseq.txt \
	twofeat.txt union.txt vectorstrip.txt water.txt whichdb.txt \
               wobble.txt wordcount.txt wordmatch.txt wossname.txt yank.txt

pkgdatadir=$(prefix)/share/$(PACKAGE)/doc/programs/text
pkgdata2dir=$(prefix)/share/$(PACKAGE)/doc/programs/text
