pkgdata_DATA = Eacc.cut Eadenovirus5.cut Eadenovirus7.cut Eaidlav.cut \
               Eanasp.cut Eani.cut Eani_h.cut Eanidmit.cut Easn.cut \
               Eath.cut Eatu.cut Eavi.cut Ebja.cut Ebly.cut Ebme.cut \
               Ebmo.cut Ebna.cut Ebov.cut Ebovsp.cut Ebst.cut \
               Ebsu.cut Ebsu_h.cut Ecac.cut Ecal.cut Eccr.cut Ecel.cut \
               Echi.cut Echicken.cut Echisp.cut Echk.cut Echmp.cut \
               Echnt.cut Echos.cut Echzm.cut Echzmrubp.cut Ecpx.cut \
               Ecre.cut Ecrisp.cut Ectr.cut Edayhoff.cut Eddi.cut \
               Eddi_h.cut Edog.cut Edro.cut Edro_h.cut Edrosophila.cut \
               Eeca.cut Eeco.cut Eeco_h.cut Eecoli.cut Ef1.cut \
               Efish.cut Efmdvpolyp.cut Eham.cut Ehha.cut Ehin.cut \
               Ehma.cut Ehum.cut Ehuman.cut Ekla.cut Ekpn.cut \
               Ella.cut Emac.cut Emaize.cut Emam_h.cut Emixlg.cut \
               Emouse.cut Emsa.cut Emse.cut Emta.cut Emtu.cut \
               Emus.cut Emussp.cut Emva.cut Emze.cut Emzecp.cut \
               Encr.cut Eneu.cut Engo.cut Eoncsp.cut Epae.cut \
               Epea.cut Epet.cut Epfa.cut Ephix174.cut Ephv.cut \
               Ephy.cut Epig.cut Epolyomaa2.cut Epombe.cut Epombecai.cut \
               Epot.cut Eppu.cut Epse.cut Epsy.cut Epvu.cut Erab.cut \
               Erabbit.cut Erabsp.cut Erat.cut Eratsp.cut Erca.cut \
               Erhm.cut Eric.cut Erle.cut Erme.cut Ersp.cut Esalsp.cut \
               Esau.cut Esco.cut Esgi.cut Eshp.cut Eshpsp.cut Esli.cut \
               Eslm.cut Esma.cut Esmi.cut Esmu.cut Esoy.cut Espi.cut \
               Espn.cut Espo.cut Espo_h.cut Espu.cut Esta.cut Esty.cut \
               Esus.cut Esv40.cut Esyhsp.cut Esynsp.cut Etbr.cut \
               Etcr.cut Eter.cut Etetsp.cut Etob.cut Etobcp.cut \
               Etom.cut Etrb.cut Evco.cut Ewht.cut Exel.cut Exenopus.cut \
               Eyeast.cut Eyeastcai.cut Eyen.cut Eysc.cut Eysc_h.cut \
               Eyscmt.cut Eysp.cut Ezebrafish.cut Ezma.cut

pkgdatadir=$(prefix)/share/$(PACKAGE)/data/CODONS
