SUBDIRS = filemgr

pkgdata_DATA = EmbreoACD.html EmbreoAnnotate.html EmbreoAppList.html \
EmbreoAuthException.html EmbreoAuthPopup.html EmbreoAuthPrompt.html \
EmbreoException.html EmbreoFrame.html EmbreoGroupList.html \
EmbreoGroupTree.html EmbreoHelp.html EmbreoHelpView.html EmbreoJList.html \
EmbreoListFile.html EmbreoMakeFileSafe.html EmbreoParams.html \
EmbreoPendingResults.html EmbreoPrivateRequest.html \
EmbreoPublicRequest.html EmbreoResList.html EmbreoResListView.html \
EmbreoResSave.html EmbreoResView.html EmbreoResult.html \
EmbreoRun.html EmbreoServiceDesc.html EmbreoShowDB.html \
EmbreoStartup.html EmbreoTreeCellRenderer.html EmbreoUtils.html

pkgdatadir=$(prefix)/share/$(PACKAGE)/jemboss/embreo/api-docs/uk/ac/mrc/hgmp/embreo
