pkgdata_DATA = EmbreoFile.html EmbreoFileGet.html EmbreoFileLaunch.html \
EmbreoFileList.html EmbreoFileListView.html EmbreoFileMgr.html \
EmbreoFileNode.html EmbreoFilePut.html EmbreoFileRequest.html \
EmbreoFileRoots.html EmbreoFileSave.html EmbreoFileTree.html \
EmbreoFileTreePanel.html EmbreoFileView.html EmbreoFileViewPanel.html \
EmbreoLocalGet.html EmbreoLocalRoots.html EmbreoLocalTree.html \
EmbreoLocalTreePanel.html EmbreoLocalView.html EmbreoLocalViewPanel.html \
FileNode.html WindowsAltFileSystemView.html

pkgdatadir=$(prefix)/share/$(PACKAGE)/jemboss/embreo/api-docs/uk/ac/mrc/hgmp/embreo/filemgr
